# populate-mysql-to-sqlserver

./: .gitignore  PopulateTimbang.spec  backup_trigger.sql  main.py  main.spec  main_V1 masih bengkak log.py  main_init_mysql_to_sqlserver.go  main_init_mysql_to_sqlserver.py  pyproject.toml
